SERVER-55357: Start a new retryable write chain on each migration